# myThermo

./: .gitignore  angular.js  index.html  script.js  site.css  test.css
esp/: CMakeLists.txt
esp/builds/: app.out
esp/include/: c_types.h  mem.h  osapi.h
esp/ld/: eagle.app.v6.ld  eagle.app.v6.new.2048.ld
esp/src/: Makefile  makeUser12.bat
esp/src/driver/: base64.c  d18b20.c  ds1820.c  franken.c  one_wire.c
esp/src/include/: auto_temp.h  clionhelper.h  cpptest.h  drawing.h  fota.h  helper_func.h  http_client.h  icons.h  json_parse_command.h  json_parse_weather.h  list.h  missingIncludes.h  mqttMain.h  myFlashState.h  my_duckdns.h  my_flash.h  my_temperature.h  my_thingspeak.h  u8g.h  user_config.h  user_config.local.h  user_config.sample.h  user_config.wall.h  user_config_base.h  user_global.h  weather.h
esp/src/mqtt/: mqtt.c  mqtt_msg.c  wifi.c
esp/src/u8glib/: Makefile  u8g_bitmap.c  u8g_circle.c  u8g_clip.c  u8g_com_api.c  u8g_com_api_16gr.c  u8g_com_esp8266_ssd_i2c.c  u8g_com_i2c.c  u8g_com_io.c  u8g_com_null.c  u8g_cursor.c  u8g_delay.c  u8g_dev_null.c  u8g_dev_ssd1306_128x64.c  u8g_ellipse.c  u8g_font.c  u8g_line.c  u8g_ll_api.c  u8g_page.c  u8g_pb.c  u8g_pb14v1.c  u8g_pb16h1.c  u8g_pb16h2.c  u8g_pb16v1.c  u8g_pb16v2.c  u8g_pb32h1.c  u8g_pb8h1.c  u8g_pb8h1f.c  u8g_pb8h2.c  u8g_pb8h8.c  u8g_pb8v1.c  u8g_pb8v2.c  u8g_pbxh16.c  u8g_pbxh24.c  u8g_polygon.c  u8g_rect.c  u8g_rot.c  u8g_scale.c  u8g_state.c  u8g_u16toa.c  (+2 more)
esp/src/user/: auto_temp.c  clionhelper.c  cpptest.cpp  drawing.c  fota.c  http_client.c  json_parse_command.c  json_parse_weather.c  (+13 more)
(+43 files in other folders)
